[package]
name = "zombie_arena"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bevy = { version = "0.12.1", features = ["wav", "dynamic_linking"] }
bevy_asset_loader = "0.19.1"

strum = { version = "0.26.1", features = ["derive"] }
winit = "0.28"
image = "0.24"


[build-dependencies]
embed-resource = "2.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
